Fix UI layout
After each refresh period, the length of items in the dropdown panel can
vary. The ST widgets will automatically resized to fit tot he new itmes
length. That makes the UI hard to read, because the items are moving
vertically.

This fix freezes the width of meter widgets when the panel is opened and
unreeze when closed. This way the UI takes the size of the actual
content and fixes it until remain opened.

--- a/System_Monitor@bghome.gmail.com/stylesheet.css
+++ b/System_Monitor@bghome.gmail.com/stylesheet.css
@@ -14,7 +14,7 @@
 }
 
 .bytes-text {
-    min-width: 4em;
+    min-width: 4.3em;
     text-align: right;
     padding-left: 1em;
 }
@@ -24,7 +24,5 @@
 }
 
 .meter-area-container {
-    max-width: 1800px;
-    max-height: 1000px;
     background-color: inherit;
 }
